Extract all value needed automatically from the sheet

--- a/summary.ipynb
+++ b/summary.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 130,
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 131,
    "outputs": [],
    "source": [
     "raw_data_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/2022 v2 Annual Technology Baseline Workbook Corrected 7-21-2022.xlsx'\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 132,
    "outputs": [],
    "source": [
     "ancillary = pd.read_excel(ancillary_path)\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 133,
    "outputs": [],
    "source": [
     "# get all the name of the sheets -> intersect with tech list\n",
@@ -117,97 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overnight Capital Cost ($/kW)\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Fixed Operation and Maintenance Expenses ($/kW-yr)\n",
-      "Variable Operation and Maintenance Expenses ($/MWh)\n",
-      "Grid Connection Costs (GCC) ($/kW)\n",
-      "Offshore Spur Line Costs ($/kW)\n",
-      "Levelized Cost of Energy ($/MWh)\n",
-      "Tax Credit\n",
-      "Depreciation Factor\n",
-      "Construction Finance Factor\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Fixed Operation and Maintenance Expenses ($/kW-yr)\n",
-      "Variable Operation and Maintenance Expenses ($/MWh)\n",
-      "Grid Connection Costs (GCC) ($/kW)\n",
-      "Levelized Cost of Energy ($/MWh)\n",
-      "Tax Credit\n",
-      "Depreciation Factor\n",
-      "Construction Finance Factor\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Fixed Operation and Maintenance Expenses ($/kW-yr)\n",
-      "Variable Operation and Maintenance Expenses ($/MWh)\n",
-      "Grid Connection Costs (GCC) ($/kW)\n",
-      "Levelized Cost of Energy ($/MWh)\n",
-      "Tax Credit\n",
-      "Depreciation Factor\n",
-      "Construction Finance Factor\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Fixed Operation and Maintenance Expenses ($/kW-yr)\n",
-      "Variable Operation and Maintenance Expenses ($/MWh)\n",
-      "Fuel Costs ($/MMBtu)\n",
-      "Fuel Costs ($/MWh)\n",
-      "Grid Connection Costs (GCC) ($/kW)\n",
-      "Levelized Cost of Energy ($/MWh)\n",
-      "Tax Credit\n",
-      "Depreciation Factor\n",
-      "Construction Finance Factor\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Fixed Operation and Maintenance Expenses ($/kW-yr)\n",
-      "Variable Operation and Maintenance Expenses ($/MWh)\n",
-      "Grid Connection Costs (GCC) ($/kW)\n",
-      "Levelized Cost of Energy ($/MWh)\n",
-      "Tax Credit\n",
-      "Depreciation Factor\n",
-      "Construction Finance Factor\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Fixed Operation and Maintenance Expenses ($/kW-yr)\n",
-      "Variable Operation and Maintenance Expenses ($/MWh)\n",
-      "Grid Connection Costs (GCC) ($/kW)\n",
-      "Levelized Cost of Energy ($/MWh)\n",
-      "Tax Credit\n",
-      "Depreciation Factor\n",
-      "Construction Finance Factor\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Fixed Operation and Maintenance Expenses ($/kW-yr)\n",
-      "Variable Operation and Maintenance Expenses ($/MWh)\n",
-      "Grid Connection Costs (GCC) ($/kW)\n",
-      "Levelized Cost of Energy ($/MWh)\n",
-      "Tax Credit\n",
-      "Depreciation Factor\n",
-      "Construction Finance Factor\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Overnight Capital Cost ($/kW)\n",
-      "Fixed Operation and Maintenance Expenses ($/kW-yr)\n",
-      "Variable Operation and Maintenance Expenses ($/MWh)\n",
-      "Round-Trip Efficiency\n",
-      "Grid Connection Costs (GCC) ($/kW)\n",
-      "Tax Credit\n",
-      "Depreciation Factor\n",
-      "Construction Finance Factor\n"
-     ]
-    }
-   ],
+   "execution_count": 134,
+   "outputs": [],
    "source": [
     "# iterate through all sheets level techs\n",
     "sheets = {}\n",
     "for sheet in sheet_list:\n",
     "    sheet_df = pd.read_excel(raw, sheet_name=str(sheet)).iloc[:, 9:].dropna(how='all')\n",
     "    index = None\n",
-    "    area_head = None\n",
+    "    head = []\n",
     "    # iterate over rows\n",
     "    for i in range(len(sheet_df)):\n",
     "        # get the value on the current index column\n",
@@ -219,15 +137,15 @@
     "                # assign the current index to the cell\n",
     "                sheet_df.iloc[i, 0] = str(index)\n",
     "        else:\n",
-    "            # first valid\n",
-    "            if index is None and (working_index in index_list):\n",
-    "                print(working_index)\n",
-    "                area_head = i\n",
+    "            if working_index in index_list:\n",
+    "                index = working_index\n",
+    "                # keep the header row\n",
+    "                sheet_df.iloc[i-1, 0] = 'Header Row'\n",
+    "            else:\n",
+    "                sheet_df.iloc[i, 0] = None\n",
+    "                index = None\n",
     "\n",
-    "            if area_head is not None:\n",
-    "                index = str(working_index)\n",
-    "\n",
-    "    sheet_df = sheet_df.iloc[area_head:, :]\n",
+    "    sheet_df = sheet_df.dropna(how='any', subset=['Unnamed: 9'])\n",
     "    sheets[str(sheet)] = sheet_df"
    ],
    "metadata": {
@@ -239,68 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 135,
    "outputs": [
     {
      "data": {
-      "text/plain": "                                            Unnamed: 9 Unnamed: 10  \\\n0                                                  NaN         NaN   \n1                                                  NaN         NaN   \n2                                                  NaN         NaN   \n7                                           Base Year:         NaN   \n8    All values are given in 2020 U.S. dollars, usi...         NaN   \n..                                                 ...         ...   \n579                        Construction Finance Factor         NaN   \n580                        Construction Finance Factor         NaN   \n581                        Construction Finance Factor         NaN   \n584                        Construction Finance Factor         NaN   \n767                        Construction Finance Factor         NaN   \n\n    Unnamed: 11 https://atb.nrel.gov/electricity/2022/offshore_wind  \\\n0           NaN                                                NaN    \n1           NaN                                                NaN    \n2           NaN                                                NaN    \n7           NaN                                               2020    \n8           NaN                                                NaN    \n..          ...                                                ...    \n579         NaN                                                NaN    \n580         NaN                                                NaN    \n581         NaN                                                NaN    \n584         NaN                                                NaN    \n767         NaN                                                  0    \n\n                          Unnamed: 13                 Unnamed: 14  \\\n0                                 NaN                         NaN   \n1                                 NaN                         NaN   \n2                                 NaN                         NaN   \n7                                 NaN                         NaN   \n8                                 NaN                         NaN   \n..                                ...                         ...   \n579  Adapted from Valpy et al., 2017    and Hundleby et al., 2017   \n580   Adapted from Valpy et al., 2017   and Hundleby et al., 2017   \n581   Adapted from Valpy et al., 2017   and Hundleby et al., 2019   \n584                Beiter et al, 2019          Beiter et al. 2020   \n767                                 0                           0   \n\n             Unnamed: 15 Unnamed: 16 Unnamed: 17 Unnamed: 18  ... Unnamed: 37  \\\n0                    NaN         NaN         NaN         NaN  ...         NaN   \n1                    NaN         NaN         NaN         NaN  ...         NaN   \n2                    NaN         NaN         NaN         NaN  ...         NaN   \n7                    NaN         NaN         NaN         NaN  ...         NaN   \n8                    NaN         NaN         NaN         NaN  ...         NaN   \n..                   ...         ...         ...         ...  ...         ...   \n579   Beiter et al. 2020         NaN         NaN         NaN  ...         NaN   \n580   Beiter et al. 2020         NaN         NaN         NaN  ...         NaN   \n581   Beiter et al. 2020         NaN         NaN         NaN  ...         NaN   \n584                  NaN         NaN         NaN         NaN  ...         NaN   \n767                    0           0           0           0  ...         0.0   \n\n    Unnamed: 38  Unnamed: 39  Unnamed: 40  Unnamed: 41  Unnamed: 42  \\\n0           NaN          NaN          NaN          NaN          NaN   \n1           NaN          NaN          NaN          NaN          NaN   \n2           NaN          NaN          NaN          NaN          NaN   \n7           NaN          NaN          NaN          NaN          NaN   \n8           NaN          NaN          NaN          NaN          NaN   \n..          ...          ...          ...          ...          ...   \n579         NaN          NaN          NaN          NaN          NaN   \n580         NaN          NaN          NaN          NaN          NaN   \n581         NaN          NaN          NaN          NaN          NaN   \n584         NaN          NaN          NaN          NaN          NaN   \n767         0.0          0.0          0.0          0.0          0.0   \n\n    Unnamed: 43  Unnamed: 44  Unnamed: 45  Unnamed: 46  \n0           NaN          NaN          NaN          NaN  \n1           NaN          NaN          NaN          NaN  \n2           NaN          NaN          NaN          NaN  \n7           NaN          NaN          NaN          NaN  \n8           NaN          NaN          NaN          NaN  \n..          ...          ...          ...          ...  \n579         NaN          NaN          NaN          NaN  \n580         NaN          NaN          NaN          NaN  \n581         NaN          NaN          NaN          NaN  \n584         NaN          NaN          NaN          NaN  \n767         0.0          0.0          0.0          0.0  \n\n[552 rows x 38 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 9</th>\n      <th>Unnamed: 10</th>\n      <th>Unnamed: 11</th>\n      <th>https://atb.nrel.gov/electricity/2022/offshore_wind</th>\n      <th>Unnamed: 13</th>\n      <th>Unnamed: 14</th>\n      <th>Unnamed: 15</th>\n      <th>Unnamed: 16</th>\n      <th>Unnamed: 17</th>\n      <th>Unnamed: 18</th>\n      <th>...</th>\n      <th>Unnamed: 37</th>\n      <th>Unnamed: 38</th>\n      <th>Unnamed: 39</th>\n      <th>Unnamed: 40</th>\n      <th>Unnamed: 41</th>\n      <th>Unnamed: 42</th>\n      <th>Unnamed: 43</th>\n      <th>Unnamed: 44</th>\n      <th>Unnamed: 45</th>\n      <th>Unnamed: 46</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Base Year:</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2020</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>All values are given in 2020 U.S. dollars, usi...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>579</th>\n      <td>Construction Finance Factor</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Adapted from Valpy et al., 2017</td>\n      <td>and Hundleby et al., 2017</td>\n      <td>Beiter et al. 2020</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>580</th>\n      <td>Construction Finance Factor</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Adapted from Valpy et al., 2017</td>\n      <td>and Hundleby et al., 2017</td>\n      <td>Beiter et al. 2020</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>581</th>\n      <td>Construction Finance Factor</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Adapted from Valpy et al., 2017</td>\n      <td>and Hundleby et al., 2019</td>\n      <td>Beiter et al. 2020</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>584</th>\n      <td>Construction Finance Factor</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Beiter et al, 2019</td>\n      <td>Beiter et al. 2020</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>767</th>\n      <td>Construction Finance Factor</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>552 rows × 38 columns</p>\n</div>"
+      "text/plain": "array(['Header Row', 'Overnight Capital Cost ($/kW)',\n       'Fixed Operation and Maintenance Expenses ($/kW-yr)',\n       'Variable Operation and Maintenance Expenses ($/MWh)'],\n      dtype=object)"
      },
-     "execution_count": 110,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sheets[sheet_list[0]]"
+    "sheets[sheet_list[0]]['Unnamed: 9'].unique()"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['Overnight Capital Cost ($/kW)',\n 'Fixed Operation and Maintenance Expenses ($/kW-yr)',\n 'Variable Operation and Maintenance Expenses ($/MWh)']"
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "index_list"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
