specify a special logic for storages, and optimized the logic of selecting rows needed

--- a/summary.ipynb
+++ b/summary.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 77,
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "raw_data_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/2022 v2 Annual Technology Baseline Workbook Corrected 7-21-2022.xlsx'\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 79,
    "outputs": [],
    "source": [
     "ancillary = pd.read_excel(ancillary_path)\n",
@@ -90,7 +90,8 @@
    "cell_type": "markdown",
    "source": [
     "## Main loop\n",
-    "- Iterate over tech sheets needed"
+    "- Iterate over tech sheets needed, and get rid of the extraneous rows.\n",
+    "- Make a dictionary of each sheet to store their corresponding dataframe"
    ],
    "metadata": {
     "collapsed": false,
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 80,
    "outputs": [],
    "source": [
     "# get all the name of the sheets -> intersect with tech list\n",
@@ -117,35 +118,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 84,
    "outputs": [],
    "source": [
-    "# iterate through all sheets level techs\n",
     "sheets = {}\n",
+    "last_i = None\n",
+    "\n",
+    "# iterate through all sheets level techs\n",
     "for sheet in sheet_list:\n",
-    "    sheet_df = pd.read_excel(raw, sheet_name=str(sheet)).iloc[:, 9:].dropna(how='all')\n",
+    "    # special specification for storages\n",
+    "    if not 'Storage' in sheet:\n",
+    "        sheet_df = pd.read_excel(raw, sheet_name=str(sheet)).iloc[:, 9:].dropna(how='all')\n",
+    "    else:\n",
+    "        sheet_df = pd.read_excel(raw, sheet_name=str(sheet)).iloc[:, 3:].dropna(how='all')\n",
     "    index = None\n",
-    "    head = []\n",
     "    # iterate over rows\n",
     "    for i in range(len(sheet_df)):\n",
     "        # get the value on the current index column\n",
     "        working_index = sheet_df.iloc[i, 0]\n",
     "\n",
-    "        # if it has null value\n",
-    "        if pd.isna(working_index):\n",
-    "            if not index is None:\n",
-    "                # assign the current index to the cell\n",
-    "                sheet_df.iloc[i, 0] = str(index)\n",
-    "        else:\n",
+    "        if not pd.isna(working_index):\n",
+    "            sheet_df.iloc[i-1, 0] = None    # get rid of the header (year) row\n",
     "            if working_index in index_list:\n",
     "                index = working_index\n",
-    "                # keep the header row\n",
-    "                sheet_df.iloc[i-1, 0] = 'Header Row'\n",
+    "                last_i = i\n",
     "            else:\n",
-    "                sheet_df.iloc[i, 0] = None\n",
     "                index = None\n",
     "\n",
-    "    sheet_df = sheet_df.dropna(how='any', subset=['Unnamed: 9'])\n",
+    "        sheet_df.iloc[i, 0] = index\n",
+    "\n",
+    "    # get the header\n",
+    "    header = list(sheet_df.iloc[last_i-1, :].values)\n",
+    "    header[0:3] = ['Index', 'Display Name', 'Scenario']\n",
+    "    sheet_df.columns = header\n",
+    "\n",
+    "    sheet_df = sheet_df.dropna(how='any', subset=['Index']).reset_index(drop=True)\n",
     "    sheets[str(sheet)] = sheet_df"
    ],
    "metadata": {
@@ -156,21 +163,47 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "- for those tech that is relatively more detailed, we shall first generate a dictionary of its correspondence to the parent sheet it belongs to.\n",
+    "- For now, we are trying to match the sub-techs with the sheet which has a name that is most similar to it.\n",
+    "- i.e.,"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 83,
    "outputs": [
     {
      "data": {
-      "text/plain": "array(['Header Row', 'Overnight Capital Cost ($/kW)',\n       'Fixed Operation and Maintenance Expenses ($/kW-yr)',\n       'Variable Operation and Maintenance Expenses ($/MWh)'],\n      dtype=object)"
+      "text/plain": "True"
      },
-     "execution_count": 135,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sheets[sheet_list[0]]['Unnamed: 9'].unique()"
+    "'Storage' in 'Utility-Scale Battery Storage'"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
